--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
             <div class="question">
             </div>
-
+            <br>
+            <br>
+<div class="pupperline">
             <label for="doginput" class="doginput">What's your favorite pupper?
             </label>
 
@@ -32,6 +34,7 @@
 
             <input id="add-dog" class="adddog" type="submit" value="Add dog">
             </input>
+        </div>
         
             <div class="gifshere" id="gifs-here">
             </div>
